--- a/sass/partials/_sidebar.scss
+++ b/sass/partials/_sidebar.scss
@@ -29,6 +29,9 @@ aside.widget-container {
 			background: $dark-tan;
 			padding: 3px;
 			box-shadow: 0 0 3px $light-tan;
+			margin-right: -2em;
+			margin-left: 0;
+			max-width: 50%;
 		}
 
 		.author {
